# django-musicsurvey

./: LICENSE  MANIFEST.in  README.md  README.rst  setup.cfg
musicsurvey/: __init__.py  admin.py  apps.py  models.py  settings.py  urls.py  views.py
musicsurvey/management/commands/: importsongs.py  plotstats.py
musicsurvey/static/musicsurvey/: style.css
musicsurvey/templates/: 404.html
musicsurvey/templates/musicsurvey/: index.html  thanks.html
musicsurvey/templatetags/: tags.py
